[package]
name = "wandio-sys"
version = "0.1.0"
edition = "2021"
authors = ["Brendan Horan"]
description = "System bindings for bgpstream"
readme = "README.md"
license = "BSD-3-Clause"
documentation = "https://github.com/brendanhoran/wandio-sys/blob/main/README.md"
repository = "https://github.com/brendanhoran/wandio-sys"
links = "wandio"

[dependencies]
curl-sys = { version = "0.4.63", features = ['static-curl'] }

[build-dependencies]
bindgen = "0.65.1"
autotools = "0.2"
curl-sys = { version = "0.4.63", features = ['static-curl'] }
