[package]
name = "wandio-sys"
version = "0.2.0"
edition = "2021"
authors = ["Brendan Horan"]
description = "System bindings for bgpstream"
readme = "README.md"
license = "BSD-3-Clause"
documentation = "https://github.com/brendanhoran/wandio-sys/blob/main/README.md"
repository = "https://github.com/brendanhoran/wandio-sys"
links = "wandio"

[dependencies]
pkg-config = "0.3.27"

[build-dependencies]
bindgen = "0.65.1"
autotools = "0.2"
pkg-config = "0.3.27"
